tests/golden/errors/repeat-too-large.rk
fn main() {
    print("abc".repeat(9223372036854775807))
}
